<resources>
    <string name="app_name">PAA</string>
    <string name="app_title">PAA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Run Sarah Run!</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_report">Add Report</string>

    <string name="menu_home">Home</string>
    <string name="menu_register_login">Register/Login</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_memberprofile">Member Profile</string>
    <string name="menu_survey">Forms and Survey</string>
    <string name="menu_repository">Repository</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_info_board">InfoBoard</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_events_sched">Events and Schedule</string>
    <string name="menu_member_report">Member Reports</string>
    <!-- REGISTER -->
    <string name="text_profile_pic">Profile Picture</string>
    <string name="text_full_name">Full Name</string>
    <string name="text_address">Complete Address</string>
    <string name="text_birthplace">Birthday</string>
    <string name="text_age">Age</string>
    <string name="text_mobile_number">Mobile Number</string>
    <string name="text_affiliate">Affiliate/Organization</string>
    <string name="text_employer">Employer</string>
    <string name="text_id_pic">ID Pic</string>
    <string name="text_status">Status</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <!-- LOGIN -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_login">Login Here</string>
    <string name="prompt_register">Create an Account</string>
    <string name="prompt_forgot_pass"><a href="https://google.com">Forgot Password</a></string>

    <string name="prompt_no_account">No account yet?</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_splash">RSR</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!--UPDATE PROFILE-->
    <string name="profile_title">Update Profile</string>

    <!--MEMBER REPORT-->
    <string name="report_title">Enter Title</string>
    <string name="report_add_report">Add Report</string>
    <string name="report_description">Enter Description</string>
    <string name="report_location">Enter Address</string>
    <string name="report_submit_report">Submit Report</string>
    <string name="report_upload_photo">Upload Photo</string>
    <!--EVENTS-->

    <string name="event_add">Add Event</string>
    <string name="event_title">Enter Title</string>
    <string name="event_time">Enter Time</string>
    <string name="event_date">Enter Date</string>
    <string name="event_accept">Accept</string>
    <string name="event_decline">Decline</string>

    <!--NOTIFICATION-->
    <string name="notif">Inbox</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">FCM Message</string>
    <string name="default_notification_channel_name" translatable="true">RSR</string>
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>
    <string name="title_activity_image_fullscreen">FullscreenActivity</string>


    <!--PAA-->
    <string name="create_account"><u>Click here to create an account</u></string>
    <string name="login_account"><u>Log In instead</u></string>
    <string name="create_account_terms">By signing up, you are aggreeing with the terms and conditions of use of the PAA App including the data privacy terms.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>