<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.member_report.AddMemberReportActivity">


    <ImageView
        android:id="@+id/selectedImage"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_baseline_photo_size_select_actual_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/IVPreviewImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="274dp"
        android:layout_marginEnd="32dp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/add_photo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">
        <EditText
            android:id="@+id/report_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/report_title"
            android:selectAllOnFocus="true"

            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            />
        <EditText
            android:id="@+id/report_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/report_description"
            android:selectAllOnFocus="true"
            android:inputType="textMultiLine"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            />
        <EditText
            android:id="@+id/report_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/report_location"
            android:selectAllOnFocus="true"

            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            />
        <Button
            android:id="@+id/submitReport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_add_report"
            android:layout_marginBottom="150dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="@color/primary"/>

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>